<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="see_representatives">See Representatives</string>
    <string name="save_election">Save Election</string>
    <string name="delete_election">Delete Election</string>
    <string name="election_saved">Election Saved</string>
    <string name="election_deleted">Election Deleted</string>
    <string name="no_addresses_found">No Addresses Were Found</string>
    <string name="permission_denied_by_user">Permission Denied by User</string>
    <string name="settings">Settings</string>
    <string name="unable_to_get_location">Unable to Get Location</string>
    <string name="search">Search</string>
    <string name="use_location">Use My Location</string>
    <string name="search_representatives">Search Representatives</string>
    <string name="city">City</string>
    <string name="address_line2">Address Line 2</string>
    <string name="address_line1">Address Line 1</string>
    <string name="zipcode">Zipcode</string>
    <string name="locations">Locations</string>
    <string name="ballot">Ballot</string>
    <string name="correspondence">Correspondence</string>
    <string name="results">Results</string>
    <string name="information">Information Links</string>
</resources>
